# DiboTicketSystem

./: .gitignore  manage.py  package-lock.json  package.json  pyproject.toml  webpack-stats.json  webpack.config.js
DiboSecurity/: asgi.py  settings.py  urls.py  wsgi.py
DiboSecurity/management/commands/: create_users.py
assets/: main.js  main.scss
assets/css/: base.css
assets/js/: base.js  searchFirstAvailableTableFunction.js
assets/js/darkmode/: darkmode.js  darkmode.test.js  localStorageMock.js
assets/scss/: _icons.scss
assets/webpack_bundles/: main_js-d5f1edfb8d75690b7b86.js  main_js-f34cf51965eb5165ce0f.js  main_js-f34cf51965eb5165ce0f.js.LICENSE.txt  main_js-f34cf51965eb5165ce0f.js.map  main_style-d5f1edfb8d75690b7b86.js  main_style-f34cf51965eb5165ce0f.css
dapp/: models.py
dapp/forms/: ticket.py
dapp/migrations/: 0001_initial.py
dapp/views/: helper.py  static.py  ticket.py  ticket_log.py
dauth/: admin.py  apps.py  models.py
dauth/migrations/: 0001_initial.py
ftp/: ftp_init.sh
sql/: script.sql
static/favicon/: site.webmanifest
templates/base/: about_cookies.html  frontpage.html  helppage.html  privacypage.html  supportpage.html
templates/base/app/: base.html  fixed-footer.html  footer.html  (+2 more)
templates/extendable/: base_form.html  paginator.html  toast.html
templates/registration/: choose_institution.html  login.html  password_change_done.html  password_change_form.html  signup.html
templates/ticket/: create-view.html  list-closed.html  list-view.html  ticket-detail.html  ticket-update.html
templates/ticket-log/: list-view.html
(+4 files in other folders)
