[tool.poetry]
name = "dibosecurity"
version = "0.1.0"
description = ""
authors = ["blue-hexagon <w0j8uhv5csio@opayq.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
pytz = "^2022.7.1"
psycopg2 = "^2.9.5"
django-webpack-loader = "^1.8.1"
django-widget-tweaks = "^1.4.12"
django-crispy-forms = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
